# eiger-detector

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitremotes  .install-odin.sh  .travis-install-hdf5filters.sh  .travis-install-odin.sh  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build  log4cxx.xml  odinLog4cxx.xml  switcher.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _dist.yml  _docs.yml  _test.yml  _tox.yml  ci.yml  container.yml  cpp.yml
0.16.0beta3/: .buildinfo  searchindex.js
0.16.0beta3/.doctrees/: userguide.doctree
0.16.0beta4/: index.html  introduction.html
0.16.0beta4/.doctrees/: introduction.doctree
1.15.1/: .buildinfo
1.16.0/: genindex.html  introduction.html  quickstart.html  searchindex.js
1.16.0/.doctrees/: index.doctree  installation.doctree  introduction.doctree  quickstart.doctree  reference.doctree  userguide.doctree
1.16.0beta1/: searchindex.js
1.16.0beta1/.doctrees/: index.doctree
1.16.0beta2/: quickstart.html  userguide.html
1.16.0beta5/: reference.html
1.16.0beta6/: genindex.html  installation.html  search.html
1.16.1/: searchindex.js  userguide.html
1.17.0/: .buildinfo  installation.html
1.17.0beta3/: index.html  objects.inv  reference.html  search.html
1.18.0beta1/: .buildinfo  genindex.html  index.html  installation.html  introduction.html  quickstart.html  reference.html  search.html  searchindex.js  userguide.html
cmake/: FindOdinData.cmake
configure/: RELEASE
control/: setup.cfg  setup.py
cpp/: CMakeLists.txt
cpp/cmake/: FindODINDATA.cmake
cpp/data/: CMakeLists.txt  log4cxx.xml
cpp/data/common/include/: EigerDefinitions.h
cpp/data/eigerfan/include/: EigerFan.h  EigerFanConfig.h  MultiPullBroker.h
cpp/data/eigerfan/src/: CMakeLists.txt  EigerFan.cpp  MultiPullBroker.cpp  eigerfan_main.cpp
cpp/data/frameProcessor/include/: EigerProcessPlugin.h
cpp/data/frameProcessor/src/: CMakeLists.txt  EigerProcessPlugin.cpp
cpp/data/frameReceiver/include/: EigerFrameDecoder.h
cpp/data/frameReceiver/src/: CMakeLists.txt  EigerFrameDecoder.cpp
cpp/data/frameSimulator/: CMakeLists.txt
cpp/data/frameSimulator/src/: EigerFrameSimulatorPlugin.cpp
cpp/data/test/: CMakeLists.txt  SendFanControl.py  SendMetaControl.py  eigerfan_unittest.cpp
cpp/data/test/integrationTest/: CMakeLists.txt
cpp/data/test/integrationTest/config/: eiger-tr.json  metatest.json  test.json
cpp/data/test/testdata/: streamfile_1  streamfile_12  streamfile_13  streamfile_17  streamfile_2  streamfile_8  streamfile_9
data/: CMakeLists.txt
data/cmake/: FindOdinData.cmake
data/common/include/: EigerDefinitions.h  version.h.in
data/eigerfan/include/: EigerFan.h  EigerFanConfig.h
data/eigerfan/src/: CMakeLists.txt  EigerFan.cpp  eigerfan_main.cpp
data/frameProcessor/include/: EigerProcessPlugin.h
data/frameProcessor/src/: EigerProcessPlugin.cpp
data/frameReceiver/include/: EigerFrameDecoder.h
data/frameReceiver/src/: EigerFrameDecoder.cpp  EigerFrameDecoderLib.cpp
data/frameSimulator/include/: EigerFrameSimulatorOptions.h  EigerFrameSimulatorPlugin.h
data/frameSimulator/src/: CMakeLists.txt  EigerFrameSimulatorPlugin.cpp
data/test/: CMakeLists.txt  SendMetaControl.py  eigerfan_unittest.cpp  system_test.sh
data/test/integrationTest/: CMakeLists.txt
data/test/integrationTest/config/: eiger-fp.json  eiger-fr.json  eiger-tr.json  eiger.json  test.json
data/test/testdata/: streamfile_10
data/tools/: CMakeLists.txt
data/tools/EigerSimulator/: EigerSimulator.cpp
data/tools/StreamSender/: StreamSender.cpp
data/tools/StreamWriter/: StreamWriter.cpp
data/tools/python/: .gitattributes  MANIFEST.in  requirements.txt  setup.cfg  setup.py
data/tools/python/eigerodindataclient/: metalistenerclient.py
data/tools/python/metalistener/: __init__.py  _version.py  eigerMetaListener.py  eiger_meta_writer.py
data/tools/python/odindataclient/: framereceiverclient.py
deploy/: eiger.yaml  fp1.json  fp2.json  fp3.json  fp4.json  fr1.json  fr2.json  fr3.json  fr4.json  layout.kdl  log4cxx.xml  odin_server.cfg  stEigerFan.sh  stFrameProcessor1.sh  stFrameProcessor2.sh  stFrameProcessor3.sh  stFrameProcessor4.sh  stFrameReceiver1.sh  stFrameReceiver2.sh  stFrameReceiver3.sh  stFrameReceiver4.sh  stMetaWriter.sh  stOdinServer.sh  startAll.kdl  startAll.sh
docker/: Dockerfile
docs/: Makefile  conf.py  index.rst  installation.rst  introduction.rst  quickstart.rst  reference.rst  userguide.rst
eigerfan/src/: CMakeLists.txt  EigerFan.cpp  EigerFan.h  eigerfan_main.cpp
frameProcessor/src/: CMakeLists.txt  EigerProcessPlugin.cpp
frameReceiver/src/: CMakeLists.txt  EigerFrameDecoder.cpp  EigerFrameDecoderLib.cpp
init/: initEigerFan.sh  initFrameProcessor.sh  initFrameProcessor0.sh  initFrameProcessor1.sh  initFrameProcessor2.sh  initFrameProcessor3.sh  initFrameReceiver0.sh  initFrameReceiver1.sh  initFrameReceiver2.sh  initFrameReceiver3.sh  initMetaListener.sh
odindeploy/: deploy_config.json  odindeploy.py
python/: .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg
python/src/eiger_detector/: __init__.py  _version.py
python/src/eiger_detector/control/: _version.py  eiger_adapter.py  eiger_detector.py  eiger_fan_adapter.py  eiger_options.py  eiger_simulator.py  test.tif
python/src/eiger_detector/control/static/js/: odin-data.js
python/src/eiger_detector/control/testing/: test_adapter.py
python/src/eiger_detector/data/: eiger_meta_writer.py  stream2.py
python/tests/: dump_zeromq_stream.py  test_eiger_meta_writer.py
python/tests/input/: 00.json  02.json  03.json  04.json  05.json  06.json  08.json  10.json  11  12.json  13.json  14.json  15.json  16.json  17.json  18.json  20.json
test/: CMakeLists.txt  SendMetaControl.py  eigerfan_unittest.cpp  system_test.sh
tools/: CMakeLists.txt  StreamWriter.cpp
tools/EigerSimulator/: CMakeLists.txt  EigerSimulator.cpp
tools/StreamSender/: CMakeLists.txt  StreamSender.cpp
tools/StreamWriter/: CMakeLists.txt  StreamWriter.cpp
(+65 files in other folders)
