install(FILES config/eiger.json DESTINATION test_config)
install(FILES config/eiger-tr.json DESTINATION test_config)
install(FILES config/eiger-fp.json DESTINATION test_config)
install(FILES config/eiger-fr.json DESTINATION test_config)
install(FILES config/test.json DESTINATION test_config)
install(FILES config/metatest.json DESTINATION test_config)
